@@ -1,25 +1,25 @@
 Package: RecordTest
 Type: Package
 Title: Inference Tools in Time Series Based on Record Statistics
-Version: 2.1.0.9005
-Date: 2022-09-21
+Version: 2.1.1
+Date: 2022-11-03
 Authors@R: c(
   person("Jorge", "Castillo-Mateo", role = c("aut","cre","cph"), email = "jorgecastillomateo@gmail.com", comment = c(ORCID = "0000-0003-3859-0248")),
   person("Ana C.", "Cebrián", role = "ths", comment = c(ORCID = "0000-0002-9052-9674")),
   person("Jesús", "Asín", role = "ths", comment = c(ORCID = "0000-0002-0174-789X"))
-    )
+  )
 Author: Jorge Castillo-Mateo [aut, cre, cph] (<https://orcid.org/0000-0003-3859-0248>),
   Ana C. Cebrián [ths] (<https://orcid.org/0000-0002-9052-9674>),
   Jesús Asín [ths] (<https://orcid.org/0000-0002-0174-789X>)
 Maintainer: Jorge Castillo-Mateo <jorgecastillomateo@gmail.com>
 Depends: R (>= 3.5.0)
-Imports: ggplot2, stats, utils
+Imports: ggplot2, stats
 Suggests: ggpubr, knitr, rmarkdown
 Description: Statistical tools based on the probabilistic properties of the 
-    record occurrence in a sequence of independent and identically distributed 
-    continuous random variables. In particular, tools to prepare a time series 
-    as well as distribution-free trend and change-point tests and graphical 
-    tools to study the record occurrence. 
+  record occurrence in a sequence of independent and identically distributed 
+  continuous random variables. In particular, tools to prepare a time series 
+  as well as distribution-free trend and change-point tests and graphical 
+  tools to study the record occurrence. 
 License: GPL-3
 URL: https://github.com/JorgeCastilloMateo/RecordTest
 BugReports: https://github.com/JorgeCastilloMateo/RecordTest/issues
@@ -27,4 +27,4 @@ VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
 NeedsCompilation: no
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
