@@ -1,4 +1,4 @@
-#' @title Splitted and Uncorrelated Time Series \code{\link{TX_Zaragoza}}
+#' @title Split and Uncorrelated Time Series \code{\link{TX_Zaragoza}}
 #' @description The matrix resulting from the data preparation (or 
 #'   pre-processing) of \code{\link{TX_Zaragoza}$TX}. 
 #' 
