@@ -3,7 +3,7 @@
 \docType{data}
 \name{ZaragozaSeries}
 \alias{ZaragozaSeries}
-\title{Splitted and Uncorrelated Time Series \code{\link{TX_Zaragoza}}}
+\title{Split and Uncorrelated Time Series \code{\link{TX_Zaragoza}}}
 \format{
 A matrix with 70 rows and 76 columns.
 }
